# animotion

./: .gitignore  LICENSE  README.md  animotion.service  install_non_python_packages.sh  lint.sh  pyproject.toml  run-recorder.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml
animotion/app/: liveview.py  recorder.py
animotion/config/: __init__.py  animotion.py  camera.py  default.yml  event_handler.py  logging.py  state_machine.py  trigger.py
animotion/device/camera/null/: null.py
animotion/device/camera/picamera/: config.py  picamera.py
animotion/domain/: camera.py  state.py  state_machine.py
animotion/domain/event_handler/: event_handler.py  image_recorder.py  noop.py  video_recorder.py
animotion/domain/trigger/: difference.py  ensemble.py  sliding_window.py  time.py  trigger.py
